package com.bridge.abstracts;

import com.bridge.interfaces.Product;

/**
 * 09/set/2022
 * @author andre
 */
public abstract class Car {
    private final Product product;
    private final String carType;

    public Car(Product product, String carType) {
        this.product = product;
        this.carType = carType;
    }
    
    public abstract void assemble();
    public abstract void produceProduct();
    
    public void printDetails(){
        System.out.println("Car: "+ carType 
                    +", Product: "+ product.productName());
    }
}
